// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InviteMembers If User is logged in should render InviteMembers component if user is not a member of the league 1`] = `
<DocumentFragment>
  <h1
    class="text-center my-5 p-5 bg-danger text-white w-75 mx-auto"
  >
    You are not member of this league.
  </h1>
</DocumentFragment>
`;

exports[`InviteMembers Runtime Errors should cause uncaught error and render Error Boundary 1`] = `
<DocumentFragment>
  <div
    class="text-center my-5 p-4 bg-danger text-white w-75 mx-auto"
  >
    <h2>
      Invite Members Page Not Available
    </h2>
    <button
      class="fs-4 bg-white rounded"
      type="button"
    >
      Refresh
    </button>
  </div>
</DocumentFragment>
`;

exports[`InviteMembers should render InviteMembers component if loading user 1`] = `
<DocumentFragment>
  <h1
    class="text-center my-5 p-5 bg-info text-white w-75 mx-auto"
  >
    Loading...
  </h1>
</DocumentFragment>
`;

exports[`InviteMembers should render InviteMembers component if no user is logged in 1`] = `
<DocumentFragment>
  <h1
    class="text-center my-5 p-5 bg-danger text-white w-75 mx-auto"
  >
    Please Log In to invite members to your league
  </h1>
</DocumentFragment>
`;
